--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,8 +5,8 @@ spring:
     name: notification-service
   config:
     activate:
-      on-profile: local, dev, local
-    import: optional:configserver:http://localhost:8888
+      on-profile: prod
+    import: optional:configserver:http://config-service:8888
 management:
   endpoints:
     web:
