--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.4.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.4.RELEASE'
 }
 
 dependencyManagement {
