--- a/build.gradle
+++ b/build.gradle
@@ -37,12 +37,15 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-bus-kafka"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation 'io.github.lotteon-maven:blooming-blooms-utils:25022224'
     runtimeOnly 'com.h2database:h2'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.4.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.4.RELEASE'
+
+    testImplementation 'org.mockito:mockito-core:4.8.0'
+
+    implementation 'io.github.lotteon-maven:blooming-blooms-utils:25023324'
 }
 
 dependencyManagement {
