--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.4.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.4.RELEASE'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     testImplementation 'org.mockito:mockito-core:4.8.0'
 
