:sparkles: LF1-575 안읽은 알림 개수 조회 추가

--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-bus-kafka"
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.33'
-    implementation 'io.github.lotteon-maven:blooming-blooms-utils:0.1.6-alpha'
+    implementation 'io.github.lotteon-maven:blooming-blooms-utils:25041622'
     runtimeOnly 'com.h2database:h2'
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
@@ -76,7 +76,7 @@ jacocoTestCoverageVerification {
                 value = 'COVEREDRATIO'
                 minimum = 0.80
             }
-            excludes = ["*.mapper*"]
+            excludes = ["*.mapper*", "**.emitter.**"]
         }
     }
 }
@@ -84,6 +84,14 @@ jacocoTestCoverageVerification {
 test {
     jacoco {
         destinationFile = file("$buildDir/jacoco/jacoco.exec")
+        excludes += ["**/errors/**",
+                     "**/api/**",
+                     "**/mapper/**",
+                     "**/handler/**",
+                     "**/common/**",
+                     "**/api/**",
+                    "**/emitter/**"
+        ]
     }
     useJUnitPlatform()
     finalizedBy 'jacocoTestReport'
@@ -106,6 +114,7 @@ jacocoTestReport {
                             "**/*mapper*",
                             "**/*Config*",
                             "**/*Dto*",
+                            "**/emitter/**"
                     ] + Qdomains)
                 })
         )
