--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,11 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.4.RELEASE'
     implementation 'org.springframework.cloud:spring-cloud-aws-messaging:2.2.4.RELEASE'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'software.amazon.awssdk:sns:2.21.37'
 
     testImplementation 'org.mockito:mockito-core:4.8.0'
 
-    implementation 'io.github.lotteon-maven:blooming-blooms-utils:25023324'
+    implementation 'io.github.lotteon-maven:blooming-blooms-utils:25054124'
 }
 
 dependencyManagement {
