--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -10,3 +10,35 @@ spring:
   h2:
     console:
       enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create
+    generate-ddl: true
+    # Bean이 생성되기 전에 ddl 실행
+    defer-datasource-initialization: true
+    properties:
+      hibernate:
+        format_sql: true
+  sql:
+    init:
+      mode: always
+cloud:
+  aws:
+    stack:
+      auto: false
+    region:
+      static: ap-northeast-1
+    s3:
+      name: ""
+    sns:
+      arn: ""
+    credentials:
+      ACCESS_KEY_ID: ""
+      SECRET_ACCESS_KEY: ""
+    sqs:
+      product-resale-notification-check-queue:
+        name: ""
+        url: ""
+      product-resale-notification-queue:
+        name: ""
+        url: ""
