:sparkles: 문의 등록 알림

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -42,3 +42,6 @@ cloud:
       product-resale-notification-queue:
         name: ""
         url: ""
+      question-register-notification-queue:
+        name: ""
+        url: ""
