--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -46,3 +46,6 @@ cloud:
       question-register-notification-queue:
         name: ""
         url: ""
+      new-order-queue:
+        name: ""
+        url: ""
