:sparkles: LF1-680 회원 가입 알림

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -46,3 +46,6 @@ cloud:
       question-register-notification-queue:
         name: ""
         url: ""
+      newcomer-queue:
+        name: ""
+        url: ""
