:bug: Fix test fail

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -52,3 +52,6 @@ cloud:
       newcomer-queue:
         name: ""
         url: ""
+      delivery-start-notification-queue:
+        name: ""
+        url: ""
