--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -55,3 +55,6 @@ cloud:
       delivery-start-notification-queue:
         name: ""
         url: ""
+      settlement-notification-queue:
+        name: ""
+        url: ""
