:sparkles: LF1-687 주문 취소 알림

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -55,3 +55,6 @@ cloud:
       delivery-start-notification-queue:
         name: ""
         url: ""
+      order-cancel-notification-queue:
+        name: ""
+        url: ""
