:bug: Fix test fail

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -64,3 +64,6 @@ cloud:
       order-cancel-notification-queue:
         name: ""
         url: ""
+      inquery-response-notification-queue:
+        name: ""
+        url: ""
