:sparkles: LF1-864 주문 상태 알림 추가

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -69,3 +69,6 @@ cloud:
       inquery-response-notification-queue:
         name: ""
         url: ""
+      new-order-status-queue:
+        name: ""
+        url: ""
