--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation 'io.github.lotteon-maven:blooming-blooms-utils:202401100213'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-aop
     implementation 'org.springframework.boot:spring-boot-starter-aop:2.7.17'
+    // https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-prometheus
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.12.2'
 
 
     // redis
